--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    body {
+        @apply w-screen h-screen overflow-x-hidden
+    }
+}
