refactor: apply formatting

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 @layer base {
-    body {
-        @apply w-screen h-screen overflow-x-hidden
-    }
+	body {
+		@apply w-screen h-screen overflow-x-hidden;
+	}
 }
